# terminal-spotify

./: Cargo.toml  README.md  data_sketch.drawio  main  sketch.drawio
src/: lib.rs  main.rs
website/: index.js
