[package]
name = "terminal-spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.24"
rspotify = { version = "0.12.0", features = ["cli"] }
tokio = { version = "1.36.0", features = ["full"] }
